--- a/api/package.json
+++ b/api/package.json
@@ -6,8 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "test": "echo \\\"Error: no test specified\\\" && exit 1",
+    "build:ui": "rm -rf build && cd ../frontend && npm run build && cp -r build ../api",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
+  "proxy": "http://localhost:3001",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/hannahakonen/physio-web-pages.git"
@@ -20,7 +23,9 @@
   "homepage": "https://github.com/hannahakonen/physio-web-pages#readme",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
